--- a/index.html
+++ b/index.html
@@ -32,22 +32,27 @@
                     <ul class="navbar-nav me-auto mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a href="/" class="px-3 pt-2 btn-link">
-                                Home
+                                Ecosystem
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="./xnetwork.html" class="px-3 pt-2 btn-link">
-                                Explore
+                                Resources
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="./nft.html" class="px-3 pt-2 btn-link">
-                                Recommended
+                                Roadmap
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="./nft.html" class="px-3 pt-2 btn-link">
-                                About
+                                Tokenomics
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./nft.html" class="px-3 pt-2 btn-link">
+                                Socials
                             </a>
                         </li>
                     </ul>
@@ -55,7 +60,7 @@
                         <li class="nav-item">
                             <a href="./contact.html">
                                 <button type="button" class="px-2 text-white btn btn-warning">
-                                    Explore Now
+                                    Buy Now
                                 </button>
                             </a>
                         </li>
@@ -71,12 +76,14 @@
                 <div class="row">
                     <div class="col-lg-6 d-flex align-items-center justify-content-center">
                         <div
-                            style="width: 80%; backdrop-filter: blur(4.5px); border-radius: 25px; background: rgba(96, 1, 82, 0.8);; text-align: center;padding: 20px;">
-                            <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
+                            style="width: 80%; backdrop-filter: blur(4.5px); border-radius: 25px; background: rgba(96, 1, 82, 0.8);padding: 20px;">
+                            <div class = "text-center">
+                                <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
+                            </div>
                             <h5 class="text-white mt-3 top-head">Join the Play-to-Earn Revolution with Ether Surfers: The Ultimate Gaming Adventure!</h5>
                             <p class="text-white top-desc">Experience Thrilling Gameplay, Earn Real Money, and Top the Leaderboards Today!</p>
-                            <button class="btn btn-light mt-3 mark-btn"  style =  "color: #79007E">Marketplace<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
-                            <button class="btn btn-warning mt-3 mark-btn">Play Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
+                            <button class="btn btn-light mt-3 mark-btn"  style =  "color: #79007E">Telegram<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
+                            <button class="btn btn-warning mt-3 mark-btn">Download Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                         </div>
                     </div>
                     <div class="col-lg-6" style = "position: relative">
@@ -174,8 +181,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4" style= "position: relative">
-                    <img src="./assets/img/Ellipse 5.svg" style="position: absolute; right: -30%;z-index: 1;" alt="">
-                    <img src="./assets/img/mockup.svg" style="width: 100%; height: auto; z-index: 99;position: absolute;" alt=""></a>
+                    <!-- <img src="./assets/img/Ellipse 5.svg" style="position: absolute; right: -30%;z-index: 1;" alt=""> -->
+                    <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" alt=""></a>
 
                 </div>
             </div>
