--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 d-flex align-items-center justify-content-center">
-                        <div
-                            style="width: 80%; backdrop-filter: blur(4.5px); border-radius: 25px; background: rgba(96, 1, 82, 0.8);padding: 20px;">
+                        <div class = "hero-main">
                             <div class = "text-center">
                                 <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
                             </div>
@@ -86,7 +85,7 @@
                             <button class="btn btn-warning mt-3 mark-btn">Download Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                         </div>
                     </div>
-                    <div class="col-lg-6" style = "position: relative">
+                    <div class="col-lg-6">
                         <img src="./assets/img/boy.svg" class="img-fluid">
                     </div>
                 </div>
@@ -121,7 +120,7 @@
                             <h6 class = "cardd-heading">Play-to-earn</h6>
                             <p class = "cardd-desc">Discover a new level of gaming excitement with Ether Surfers, where your skills and quick thinking can earn you real money. With its pulse-pounding gameplay and cutting-edge play-to-earn ecosystem, Ether Surfers is the perfect choice for gamers looking to turn their passion into profit. Download the app and join the revolution today.</p>
                         </div>
-                        <div class = "d-flex align-items-center">
+                        <div class = "d-flex align-items-center img-sec">
                             <img src="./assets/img/Vector.png" alt="">
                         </div>
                     </div>
@@ -132,7 +131,7 @@
                             <h6 class = "cardd-heading">Staking Rewards</h6>
                             <p class = "cardd-desc">By staking your SURFER tokens, you will be able to receive up to a 70% APY. The process will be straightforward and effortless, allowing you to grow your assets without the need for active trading.</p>
                         </div>
-                        <div class = "d-flex align-items-center">
+                        <div class = "d-flex align-items-center img-sec">
                             <img src="./assets/img/Vector.png" alt="">
                         </div>
                     </div>
@@ -143,7 +142,7 @@
                             <h6 class = "cardd-heading">NFTs & Marketplace</h6>
                             <p class = "cardd-desc">Our multi-chain Surfer Marketplace will allow you to buy, sell, and trade NFTs and in-game assets directly. All transactions will be processed on a secure and reliable platform, giving you peace of mind while you explore the thrilling world of NFT trading.</p>
                         </div>
-                        <div class = "d-flex align-items-center">
+                        <div class = "d-flex align-items-center img-sec">
                             <img src="./assets/img/Vector.png" alt="">
                         </div>
                     </div>
@@ -154,7 +153,7 @@
                             <h6 class = "cardd-heading">Multichain Bridge</h6>
                             <p class = "cardd-desc">The Surfer token will soon be connected to multiple blockchain networks, including Binance Chain, Arbitrum, and Optimism. This integration will provide users with the ability to directly trade Surfer tokens with native chain currencies, expanding its reach and increasing its exposure</p>
                         </div>
-                        <div class = "d-flex align-items-center">
+                        <div class = "d-flex align-items-center img-sec">
                             <img src="./assets/img/Vector.png" alt="">
                         </div>
                     </div>
@@ -165,8 +164,8 @@
     </section>
 
     <section id="playnow" class="playnow"
-        style="position: relative; height: 800px;overflow-x: hidden; overflow-y: hidden; background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), radial-gradient(17.32% 34.78% at 20.71% 26.77%, rgba(202, 252, 1, 0.15) 0%, rgba(202, 252, 1, 0) 100%), linear-gradient(180deg, #550058 0%, #BD40C8 100%); background-size: cover; background-repeat: no-repeat;">
-        <img src="./assets/img/wavey.png" style = "position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 1;width: 100%;" alt="">
+        style="position: relative; overflow-x: hidden; overflow-y: hidden; background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), radial-gradient(17.32% 34.78% at 20.71% 26.77%, rgba(202, 252, 1, 0.15) 0%, rgba(202, 252, 1, 0) 100%), linear-gradient(180deg, #550058 0%, #BD40C8 100%); background-size: cover; background-repeat: no-repeat;">
+        <img src="./assets/img/wavey.png" class = "wavey-img" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 d-flex align-items-center">
@@ -174,13 +173,13 @@
                         <h1 class="sec-head playnowHeading">
                             Download for free from PlayStore and AppStore!</h1>
                         <p class="playnowContent mt-5 mb-5">Discover a new level of gaming excitement with Ether Surfers, where your skills and quick thinking can earn you real money. With its pulse-pounding gameplay and cutting-edge play-to-earn ecosystem, Ether Surfers is the perfect choice for gamers looking to turn their passion into profit. Download the app and join the revolution today.</p>
-                        <div class = "d-flex">
+                        <!-- <div class = "d-flex">
                             <img src="./assets/img/google-play-icon-download-23.jpg" class = "mr-4" style = "width: 250px; height: auto;" alt="">
                             <img src="./assets/img/app-store.jpg" style = "width: 250px; height: auto;" alt="">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-lg-4" style= "position: relative">
+                <div class="col-lg-4">
                     <!-- <img src="./assets/img/Ellipse 5.svg" style="position: absolute; right: -30%;z-index: 1;" alt=""> -->
                     <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" alt=""></a>
 
