--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="./assets/img/Tokenomics.svg" class = "img-fluid" alt=""></a>
+                    <img src="./assets/img/Tokenomics.svg" class = "img-fluid mt-5" alt=""></a>
 
                 </div>
                 <div class="col-lg-3 d-flex align-items-center">
