--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
         <section id="hero" class="hero-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 d-flex align-items-center justify-content-center">
+                    <div class="col-lg-6 order-md-2">
+                        <img src="./assets/img/boy.svg" class="img-fluid mb-5 boy-img">
+                    </div>
+                    <div class="col-lg-6 d-flex align-items-center justify-content-center order-md-1">
                         <div class = "hero-main">
                             <div class = "text-center">
                                 <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
@@ -84,9 +87,6 @@
                             <button class="btn btn-light mt-3 mark-btn"  style =  "color: #79007E">Telegram<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                             <button class="btn btn-warning mt-3 mark-btn">Download Now<span class = "pull-right"><i class = "fa fa-arrow-right"></i></span></button><br />
                         </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <img src="./assets/img/boy.svg" class="img-fluid">
                     </div>
                 </div>
             </div>
