--- a/index.html
+++ b/index.html
@@ -190,58 +190,56 @@
 
 
     <section id="roadmap" class="roadmap">
-        <img src="./assets/img/roadmap.svg" class = "w-100 img-fluid" alt="">
-        <!-- <h1 class="text-right sec-head">ROADMAP</h1>
-        <div class="point point-1">
-            <div class="d-flex align-items-center justify-content-center"
-                style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
+        <img src="./assets/img/roadmap.svg" class = "w-100 img-fluid roadmap-img" alt="">
+        <img src="./assets/img/wavey.png" style = "position: absolute; z-index: -1;width: 100vw; height: 110%;top:-50px" alt="">
+        <div class = "container">
+            <h1 class = "sec-head text-white road-head">Roadmap</h1>
+            <div class = "roadmap-item">
+                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
                 1</div>
-            <div style="flex: 1"><img src="./assets/img/Arrow 1.png" class = "img-fluid" alt=""></div>
-            <div style="width: 300px">
-                <h2 class="point-title">Lorem ipsum</h2>
-                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
-                    sed. Et facilisi sapien praesent vitae. </p>
+                <h6 class = "roadmap-item-heading text-center">Phase 1 ( Prototype Development) </h6>
+                <ul class = "roadmap-ul">
+                    <li>Develop a working prototype of Ether Surfers</li>
+                    <li>Beta test of the game with a small group of testers</li>
+                    <li>Implement the game’s blockchain integration </li>
+                    <li>Mainnet deployment of the official contract</li>
+                </ul>
+            </div>
+            <div class = "roadmap-item">
+                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
+                2</div>
+                <h6 class = "roadmap-item-heading text-center">Phase 2: (Expansion)</h6>
+                <ul class = "roadmap-ul">
+                    <li>Apply for listing the app on playstore and appstore </li>
+                    <li>Expand game content by adding new levels and challenges </li>
+                    <li>Develop partnerships with vetted influencers</li>
+                    <li>Develop partnerships with other blockchain based games</li>
+                </ul>
+            </div>
+            <div class = "roadmap-item">
+                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
+                3</div>
+                <h6 class = "roadmap-item-heading text-center">Phase 3: (Continuation) </h6>
+                <ul class = "roadmap-ul">
+                    <li>Apply for the listing on CMC & CG</li>
+                    <li>List $SURFER on tier 3 centralised exchanges</li>
+                    <li>Launch regular in-game events and promotions </li>
+                    <li>Bridge $SURFER on other blockchains (Arbitrum, Optimism and BNB Chain) </li>
+                </ul>
+            </div>
+            <div class = "roadmap-item">
+                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
+                4</div>
+                <h6 class = "roadmap-item-heading text-center">Phase 4: (Feature Enhancement) </h6>
+                <ul class = "roadmap-ul">
+                    <li>Continue to improve the game mechanics, graphics and reward mechanisms </li>
+                    <li>Launch a major marketing campaign to promote the game</li>
+                    <li>Launch the game on multiple platform including Xbox and Ps4 </li>
+                    <li>Apply for Tier 1 and Tier 2 centralised exchanges</li>
+                </ul>
             </div>
         </div>
-        <div class="point point-2">
-            <div style="flex: 1">
-                <div class="d-flex align-items-center justify-content-center"
-                    style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
-                    2</div>
-            </div>
-            <div><img src="./assets/img/Arrow 1 (1).png" class = "img-fluid" alt=""></div>
-            <div style="width: 300px">
-                <h2 class="point-title">Lorem ipsum</h2>
-                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
-                    sed. Et facilisi sapien praesent vitae. </p>
-            </div>
-        </div>
-        <div class="point point-3">
-            <div style="width: 300px">
-                <h2 class="point-title">Lorem ipsum</h2>
-                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
-                    sed. Et facilisi sapien praesent vitae. </p>
-            </div>
-            <div><img src="./assets/img/Arrow 1 (2).png" class = "img-fluid" alt=""></div>
-            <div>
-                <div class="d-flex align-items-center justify-content-center"
-                    style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
-                    3</div>
-            </div>
-        </div>
-        <div class="point point-4">
-            <div style="width: 300px">
-                <h2 class="point-title">Lorem ipsum</h2>
-                <p class="point-desc">Lorem ipsum dolor sit amet consectetur. Congue hac natoque id est odio at ut enim
-                    sed. Et facilisi sapien praesent vitae. </p>
-            </div>
-            <div><img src="./assets/img/Arrow 1 (3).png" class = "img-fluid" alt=""></div>
-            <div>
-                <div class="d-flex align-items-center justify-content-center"
-                    style="height: 60px; color: #fff; width: 60px; background: #FEC700; border-radius: 50%; font-size: 30px; font-weight: 800;">
-                    3</div>
-            </div>
-        </div> -->
+        
     </section>
     <section id="tokenomics" class="tokenomics" style="background-color:#7d097c;">
         <div class="container">
