--- a/index.html
+++ b/index.html
@@ -285,6 +285,15 @@
         </div>
     </section>
 
+    <div class="outer-wrapper">
+        <div class="wrapper">
+          <div class="slide one"></div>
+          <div class="slide two"></div>
+          <div class="slide three"></div>
+          <div class="slide four"></div>
+        </div>
+      </div>
+
     <footer style="padding: 50px 0 0 0; background: #01B3E2; color: #fff;">
         <div class="container">
             <div class="row px-4">
