--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <section class="principles" style=" background: #530f70;">
         <div class="principles__container content-container">
-            <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Subway Ecosystem
+            <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Surfer Ecosystem
             </h1>
             <div class="principles__scroll">
                 <div class="principles__list">
@@ -209,7 +209,7 @@
                             trade NFTs and in-game assets directly. All transactions will be processed on a secure
                             and reliable platform, giving you peace of mind while you explore the thrilling world of
                     </div>
-                    <div class="principles__item" style = "background: transparent">
+                    <div class="principles__item" style="background: transparent">
                     </div>
                 </div>
             </div>
@@ -245,60 +245,61 @@
         </div>
     </section>
 
-    
+
     <section id="roadmap" class="roadmap">
-        <img src="./assets/img/roadmap.svg" class = "w-100 img-fluid roadmap-img" alt="">
-        <div class = "resp-roadmap">
-            <img src="./assets/img/wavey.png" style = "position: absolute; z-index: -1;width: 100vw; height: 110%;top:-50px" alt="">
-        <div class = "container">
-            <h1 class = "sec-head text-white road-head">Roadmap</h1>
-            <div class = "roadmap-item">
-                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
-                1</div>
-                <h6 class = "roadmap-item-heading text-center">Phase 1 ( Prototype Development) </h6>
-                <ul class = "roadmap-ul">
-                    <li>Develop a working prototype of Ether Surfers</li>
-                    <li>Beta test of the game with a small group of testers</li>
-                    <li>Implement the game’s blockchain integration </li>
-                    <li>Mainnet deployment of the official contract</li>
-                </ul>
-            </div>
-            <div class = "roadmap-item">
-                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
-                2</div>
-                <h6 class = "roadmap-item-heading text-center">Phase 2: (Expansion)</h6>
-                <ul class = "roadmap-ul">
-                    <li>Apply for listing the app on playstore and appstore </li>
-                    <li>Expand game content by adding new levels and challenges </li>
-                    <li>Develop partnerships with vetted influencers</li>
-                    <li>Develop partnerships with other blockchain based games</li>
-                </ul>
-            </div>
-            <div class = "roadmap-item">
-                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
-                3</div>
-                <h6 class = "roadmap-item-heading text-center">Phase 3: (Continuation) </h6>
-                <ul class = "roadmap-ul">
-                    <li>Apply for the listing on CMC & CG</li>
-                    <li>List $SURFER on tier 3 centralised exchanges</li>
-                    <li>Launch regular in-game events and promotions </li>
-                    <li>Bridge $SURFER on other blockchains (Arbitrum, Optimism and BNB Chain) </li>
-                </ul>
-            </div>
-            <div class = "roadmap-item">
-                <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
-                4</div>
-                <h6 class = "roadmap-item-heading text-center">Phase 4: (Feature Enhancement) </h6>
-                <ul class = "roadmap-ul">
-                    <li>Continue to improve the game mechanics, graphics and reward mechanisms </li>
-                    <li>Launch a major marketing campaign to promote the game</li>
-                    <li>Launch the game on multiple platform including Xbox and Ps4 </li>
-                    <li>Apply for Tier 1 and Tier 2 centralised exchanges</li>
-                </ul>
+        <img src="./assets/img/roadmap.svg" class="w-100 img-fluid roadmap-img" alt="">
+        <div class="resp-roadmap">
+            <img src="./assets/img/wavey.png"
+                style="position: absolute; z-index: -1;width: 100vw; height: 110%;top:-50px" alt="">
+            <div class="container">
+                <h1 class="sec-head text-white road-head">Roadmap</h1>
+                <div class="roadmap-item">
+                    <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
+                        1</div>
+                    <h6 class="roadmap-item-heading text-center">Phase 1 ( Prototype Development) </h6>
+                    <ul class="roadmap-ul">
+                        <li>Develop a working prototype of Ether Surfers</li>
+                        <li>Beta test of the game with a small group of testers</li>
+                        <li>Implement the game’s blockchain integration </li>
+                        <li>Mainnet deployment of the official contract</li>
+                    </ul>
+                </div>
+                <div class="roadmap-item">
+                    <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
+                        2</div>
+                    <h6 class="roadmap-item-heading text-center">Phase 2: (Expansion)</h6>
+                    <ul class="roadmap-ul">
+                        <li>Apply for listing the app on playstore and appstore </li>
+                        <li>Expand game content by adding new levels and challenges </li>
+                        <li>Develop partnerships with vetted influencers</li>
+                        <li>Develop partnerships with other blockchain based games</li>
+                    </ul>
+                </div>
+                <div class="roadmap-item">
+                    <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
+                        3</div>
+                    <h6 class="roadmap-item-heading text-center">Phase 3: (Continuation) </h6>
+                    <ul class="roadmap-ul">
+                        <li>Apply for the listing on CMC & CG</li>
+                        <li>List $SURFER on tier 3 centralised exchanges</li>
+                        <li>Launch regular in-game events and promotions </li>
+                        <li>Bridge $SURFER on other blockchains (Arbitrum, Optimism and BNB Chain) </li>
+                    </ul>
+                </div>
+                <div class="roadmap-item">
+                    <div class="d-flex align-items-center justify-content-center mx-auto roadmap-item-number">
+                        4</div>
+                    <h6 class="roadmap-item-heading text-center">Phase 4: (Feature Enhancement) </h6>
+                    <ul class="roadmap-ul">
+                        <li>Continue to improve the game mechanics, graphics and reward mechanisms </li>
+                        <li>Launch a major marketing campaign to promote the game</li>
+                        <li>Launch the game on multiple platform including Xbox and Ps4 </li>
+                        <li>Apply for Tier 1 and Tier 2 centralised exchanges</li>
+                    </ul>
+                </div>
             </div>
         </div>
-        </div>
-        
+
     </section>
     <section id="tokenomics" class="tokenomics" style="background-color:#7d097c;">
         <div class="container">
